--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Utils\CodeElementList.cs" />
     <Compile Include="Utils\FileList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="System\Collections\IComparer.cs" />
     <Compile Include="ToolWindow\QuickFile\QuickFileToolWindow.cs" />
     <Compile Include="ToolWindow\QuickFile\QuickFileToolWindowCommand.cs" />
     <Compile Include="ToolWindow\QuickFile\QuickFileToolWindowControl.xaml.cs">
@@ -215,7 +214,9 @@
       <ManifestResourceName>VSPackage</ManifestResourceName>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="System\Collections\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
