--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Commands\QuickMethodCommand.cs" />
     <Compile Include="Commands\QuickSymbolCommand.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="Data\BindingProxy.cs" />
     <Compile Include="Settings.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -169,6 +170,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="ToolWindow\QuickNavigationStyle.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="ToolWindow\QuickFile\QuickFileToolWindowControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
