--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -75,6 +75,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\QuickFileCommand.cs" />
+    <Compile Include="Commands\QuickGotoCommand.cs" />
     <Compile Include="Commands\QuickHistoryCommand.cs" />
     <Compile Include="Commands\QuickMethodCommand.cs" />
     <Compile Include="Commands\QuickSymbolCommand.cs" />
