--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ platform: Any CPU
 
 before_build: 
   - nuget restore
-  - ps: vsix.ps1 Vsix-ChangeBuildNumber
+  - ps: .\vsix.ps1 Vsix-ChangeBuildNumber
 
 build:
   project: VS-QuickNavigation.sln
