--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -91,6 +91,7 @@
       <DependentUpon>QuickReferencesToolWindowControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utils\CommonUtils.cs" />
+    <Compile Include="Utils\JsonParser.cs" />
     <Compile Include="Utils\ThreadSafeObservableCollection.cs" />
     <Compile Include="VSQuickNavigationPackage.cs" />
     <Compile Include="Data\FileData.cs" />
@@ -290,6 +291,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
