Add QuickClean for regenerate file list and symbol database

--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -74,6 +74,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\QuickCleanCommand.cs" />
     <Compile Include="Commands\QuickFileCommand.cs" />
     <Compile Include="Commands\QuickGotoCommand.cs" />
     <Compile Include="Commands\QuickHistoryCommand.cs" />
