Add new symbol type "Variable"

--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -185,6 +185,9 @@
     <Content Include="Resources\Symbols\VS2012\TypeDef.png">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Resources\Symbols\VS2012\Variable.png">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\VSQuickNavigationPackage.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
