Add image for symbol type Local and change image for Variable

--- a/VS-QuickNavigation/VS-QuickNavigation.csproj
+++ b/VS-QuickNavigation/VS-QuickNavigation.csproj
@@ -166,6 +166,9 @@
     <Content Include="Resources\Symbols\VS2012\Interface.png">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Resources\Symbols\VS2012\Local.png">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\Symbols\VS2012\Macro.png">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
