--- a/VS-QuickNavigation/packages.config
+++ b/VS-QuickNavigation/packages.config
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.VSSDK.BuildTools" version="15.5.100" targetFramework="net45" developmentDependency="true" />
-  <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net45" />
-  <package id="VSSDK.IDE.8" version="8.0.4" targetFramework="net45" />
-  <package id="VSSDK.IDE.9" version="9.0.4" targetFramework="net45" />
-  <package id="VSSDK.OLE.Interop" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.10" version="10.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.Immutable.10" version="10.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.Interop" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.Interop.8" version="8.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net45" />
-  <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net45" />
+  <package id="Microsoft.VSSDK.BuildTools" version="16.2.3073" targetFramework="net461" developmentDependency="true" />
+  <package id="EnvDTE" version="8.0.2" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.CommandBars" version="8.0.0.1" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="15.0.25415" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="15.0.25415" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="15.0.25405" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30320" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61031" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30730" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.8.209" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net461" />
 </packages>
