--- a/VS-QuickNavigation/packages.config
+++ b/VS-QuickNavigation/packages.config
@@ -15,4 +15,5 @@
   <package id="Microsoft.VisualStudio.Threading" version="15.3.23" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26606" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net45" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.5.100" targetFramework="net461" developmentDependency="true" />
 </packages>
